# SudoGuru

./: .gitignore  README.md  ideer.md
rapport/: UNIK4690_prosjekt_alfrunes.tex
rapport/tex/: front_page.tex  main.tex  preamble.tex
src/: CMakeLists.txt  extract_grid.cpp  extract_grid.hpp  extractools.cpp  extractools.hpp  homography_estimator.cpp  homography_estimator.hpp  homographyestimator.cpp  homographyestimator.hpp  main.cpp  sudoguru.cpp  sudoguru.hpp
src/digitNet/: :w  README.md  convert_imageset.py  dgtNet.pb  digitNet.pb  digitNet.py  digitNet2.py  digitNet_old.py  freeze_net.py  freeze_net2.py  get_imageset.py  test_load_net.py
src/sudokusolver/: CMakeLists.txt  sudoku_board.cpp  sudoku_board.hpp  sudoku_brd_items.hpp  test.cpp
